# tauri-leptos-example

./: .gitignore  .taurignore  Cargo.toml  LICENSE  README.md  Trunk.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-ui/: Cargo.toml
src-ui/src/: lib.rs  main.rs
