[package]
name = "src_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.0.20", features = ["csr"] }
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"

serde-wasm-bindgen = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
