[package]
name = "src_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.10", features = ["csr"] }
console_log = "1.0.0"
log = "0.4"
console_error_panic_hook = "0.1"

serde = { version = "1", features = ["derive"] }

tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "e8ea8c3fec671fd2edea321ddf3283e4e1505ecb", features = [
  "all",
] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
